--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -42,13 +42,15 @@ h1{
 .display{
     font-family:'Digital', sans-serif;
     background-color: #101010;
-    font-size: 90px;
+    font-size: 60px;
     letter-spacing: 10px;
     padding: 10px;
     height: 100px;
     width: 380px;
     border-radius: 10px;
     margin-bottom: 15px;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .btn{
