--- a/form/styles.css
+++ b/form/styles.css
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: "poppins";
-    src: url(https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap);
-}
+
 .left{
     position: relative;
     height: 100vh;
@@ -21,3 +18,27 @@ a{
     color:aliceblue;
     text-decoration:underline;
 }
+
+.logo{;
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    transform: translate(-50%, -50%);
+    top: 30%;
+    left: 50%;
+}
+
+.logo img{
+    width: 150px;
+    height: auto;
+}
+
+h1{
+    font-family: "Norse", sans-serif;
+    color: aliceblue;
+    text-align: center;
+    font-size: 120px;
+    transform: translate(20px,20px);
+}
+
+
