--- a/form/styles.css
+++ b/form/styles.css
@@ -3,6 +3,7 @@
     position: relative;
     height: 100vh;
     width: 807.5px;
+    
 
 }
 .credits{
@@ -19,18 +20,31 @@ a{
     text-decoration:underline;
 }
 
-.logo{;
+.background{
+    position:absolute;
+    background-color: black;
+    height: 250px;
+    width: 807.5px;
+    top:20%;
+    opacity:70%;
+    
+    
+}
+
+.logo{
     position: absolute;
     display: flex;
     gap: 5px;
     transform: translate(-50%, -50%);
     top: 30%;
     left: 50%;
+    z-index:2;
 }
 
 .logo img{
     width: 150px;
     height: auto;
+    
 }
 
 h1{
@@ -39,6 +53,9 @@ h1{
     text-align: center;
     font-size: 120px;
     transform: translate(20px,20px);
+    
 }
+
+
 
 
