--- a/form/styles.css
+++ b/form/styles.css
@@ -43,7 +43,7 @@ a{
     transform: translate(-50%, -50%);
     top: 30%;
     left: 50%;
-    z-index:2;
+    z-index: 2;
 }
 
 .logo img{
@@ -63,7 +63,7 @@ h1{
 
 .right{
     flex:1;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     position: relative;
     height: 100vh;
 }
@@ -71,8 +71,41 @@ h1{
 .disclaimer{
     position: absolute;
     color:black;
+    left:5%;
+    top:5%;
     font-family: "poppins", sans-serif;
-    text-align: center;
-    width: 100%;
-    font-size: xx-large;
+    text-align: left;
+    width: 80%;
+    font-size: 40px;
+    font-weight: 400;
 }   
+
+.text{
+    position: absolute;
+    color:black;
+    left:5%;
+    top:25%;
+    font-family: "poppins", sans-serif;
+    text-align: left;
+    width: 80%;
+    font-size: 40px;
+    font-weight: 400;
+}
+
+.background-white{
+    position:absolute;
+    background-color: white;
+    height: 450px;
+    width: 100%;
+    top:40%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.background-white>div{
+    position: absolute;
+    color:black;
+    font-family: "poppins", sans-serif;
+    left:5%;
+    top:3%;
+    font-size: 30px;
+}
