--- a/form/styles.css
+++ b/form/styles.css
@@ -109,3 +109,42 @@ h1{
     top:3%;
     font-size: 30px;
 }
+
+.btn{
+    position: absolute;
+    background-color: #596D48;
+    font-family: "poppins", sans-serif;
+    color: white;
+    border: none;
+    top:80%;
+    left:5%;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    font-weight: 900;
+}
+
+.btn:hover{
+    background-color: #7A8B5A;
+    cursor: pointer;
+}
+
+.under-text{
+    position: absolute;
+    color:black;
+    font-family: "poppins", sans-serif;
+    left:5%;
+    width: 100%;
+    top: 85%;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+strong{
+    color: #596D48;
+}
+strong:hover{
+    color: #596D48;
+    text-decoration: underline;
+    cursor:pointer;
+}
