--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -12,74 +12,33 @@
 }
 
 .header{
-    display:flex;
+    background-color: white;
     grid-row: 1/2;
     grid-column: 2/3;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 40px;
 }
 
-.nav{
-    display:flex;
-    flex-direction: row;
-    align-items: end;
-    justify-content: space-between;
+.header .top{
+    grid-row: 1/2;
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.header .top .search{
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+.header .top .user{
     grid-row: 1/2;
     grid-column: 2/3;
-   
 }
 
-.search{
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    padding-left: 30px;
-}
-.search input{
-    font-size: 20px;
-    width:1000px;
-    height: 40px;
-    border-radius: 100px;
-    background-color: #E2E8F0;
-    border: none;
-    padding-left: 20px;
-}
-
-.user{
-    display:flex;
-    flex-direction: row;
-    gap: 30px;
-    padding-right: 120px;
-}
-.user .profile-icon{
-    border-radius: 50%;
-    height:60px;
-    width:60px;
-    margin-top: -8px;
-}
-.user p{
-    font-size:30px;
-}
-
-.right{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.left{
-    display: flex;
-    gap:60px;
-    padding-right: 120px;
-    
-}
-
-.left button{
-    color: white;
-    width: 200px;
-    height: 40px;
-    border-radius: 100px;
-    border: none;
-    background-color: #1992D4;
+.header .bottom{
+    grid-row:2/3;
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
