--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -15,6 +15,9 @@
     background-color: white;
     grid-row: 1/2;
     grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .header .top{
@@ -26,13 +29,30 @@
 }
 
 .header .top .search{
-    grid-row: 1/2;
-    grid-column: 1/2;
+    display: flex;
+    flex-direction: row;
+    padding-left: 30px;
+    gap:30px;
+    align-items: center;
+}
+
+.header .top .search input{
+    background-color: aliceblue;
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    padding-left: 20px;
 }
 
 .header .top .user{
-    grid-row: 1/2;
-    grid-column: 2/3;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 30px;
+    padding-right: 70px;
+    align-items: center;
+    
 }
 
 .header .bottom{
@@ -41,4 +61,33 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+}
+
+.header .bottom .left{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 30px;
+    gap: 30px;
+}
+
+.header .bottom .right{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 70px;
+    gap: 50px;
+}
+
+.header .bottom .right button{
+    background-color: #1992D4;
+    color: white;
+    width: 150px;
+    height: auto;
+    border-radius: 100px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
 }
