--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -4,12 +4,7 @@
     height: 100vh;
     display:grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
-}
-
-.dashboard{
-    grid-row: 1/3;
-    grid-column: 1/2;
+    grid-template-rows: 200px 1fr;
 }
 
 .header{
@@ -19,7 +14,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.9);
 }
 
 .header .top{
@@ -40,7 +35,7 @@
 }
 
 .header .top .search input{
-    background-color: aliceblue;
+    background-color: #E0E6EF;
     width: 100%;
     height: 40px;
     border-radius: 20px;
@@ -114,3 +109,21 @@
     cursor: pointer;
 }
 
+.dashboard{
+    grid-row: 1/3;
+    grid-column: 1/2;
+    background-color: #1992D4;
+    color: white;
+}
+
+.dashboard img{
+    filter: brightness(0) invert(1);
+}
+
+.main{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-color: #E0E6EF;
+    padding: 20px;
+    overflow: hidden;
+}
