--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -116,9 +116,37 @@
     color: white;
 }
 
+.dashboard h2{
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    font-size: 50px;
+}
+
+
+.dashboard ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard ul li{
+    padding-left: 10px;
+    padding-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    cursor: pointer;
+    font-size: x-large;
+
+}
+
 .dashboard img{
     filter: brightness(0) invert(1);
 }
+
 
 .main{
     grid-row: 2/3;
