--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -152,6 +152,8 @@
     grid-row: 2/3;
     grid-column: 2/3;
     background-color: #E0E6EF;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     padding: 20px;
-    overflow: hidden;
+    overflow:scroll;
 }
