--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -157,3 +157,74 @@
     padding: 20px;
     overflow:scroll;
 }
+
+
+
+.main .cards{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr repeat(3, 2fr);
+    gap: 20px;
+    padding: 20px 0;
+}
+
+.main .cards h1{
+    grid-column: 1/3;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+
+.main .cards .card{
+    width: 80%;
+    height: 300px;
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    border-left: 5px solid #f59e0b;
+}
+
+.main .cards .card h2{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.main .cards .card p{
+    font-size: 14px;
+    color: #666;
+    line-height: 1.4;
+}
+
+.main .right{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.main .right .trending{
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+
+.main .right .trending .items{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;  
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.main .right .announcement .items{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;  
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
