--- a/TicTacToe/styles.css
+++ b/TicTacToe/styles.css
@@ -32,8 +32,13 @@
     width: 100px;
     height: 100px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: white;
     cursor: pointer;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'poppins', sans-serif;
 }
 
 .cell-top-left,
